fixed up spacing on new account page so that it all fits on one page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -495,7 +495,7 @@ a.Onslow:hover, a.Fergusson:focus {
 /*new is short for new user*/
 
 .content-sectionnew {
-    padding-top: 175px;
+    padding-top: 145px;
     padding-bottom: 125px;
 }
 .content-sectionfaq {
@@ -521,7 +521,7 @@ a.Onslow:hover, a.Fergusson:focus {
       padding-top: 135px}
 
     .content-section {
-        padding-top: 150px;
+        padding-top: 100px;
     }
     .howtoplaytext-section {
         padding: 100px;
